<resources>
    <string name="app_name">FootyHub</string>
    <string name="drawer_open">Nav Drawer Open</string>
    <string name="drawer_closed">Nav Drawer Closed</string>
    <string name="nav_icon_default_content">Navigation Icon</string>

    <!-- Fragment Strings -->
    <string name="home_fragment_actionbar">Home</string>
    <string name="select_fragment_actionbar">Select a favourite team</string>
    <string name="news_fragment_actionbar">Team News</string>
    <string name="fixture_fragment_actionbar">Fixtures / Results</string>
    <string name="standings_fragment_actionbar">Standings</string>
    <string name="settings_fragment_actionbar">Settings</string>

    <!-- Team Choice Strings -->
    <string name="selectFragHeader">Choose your favourite team</string>
    <string name="teamLogoContent">Team logo</string>
    <string name="selectFavTeam">Set %1$s as your favourite team?</string>

    <!-- Home Fragment Strings -->
    <string name="venueHeader">Venue</string>
    <string name="foundedHeader">Founded</string>
    <string name="coachHeader">Coach</string>
    <string name="nextFixtureHeader">Next Fixture</string>
    <string name="prevFixtureHeader">Previous Result</string>
    <string name="newsHeader">%1$s News</string>
    <string name="nextFixtureTitle">%1$s v %2$s</string>
    <string name="prevFixtureTitle">%1$s v %2$s</string>
    <string name="newsArticleHeader">News Articles</string>

    <!-- Drawer Menu Strings -->
    <string name="home_drawer_menu">Home</string>
    <string name="change_favourite_drawer_menu">Change Favourite Team</string>
    <string name="team_news_drawer_menu">Team News</string>
    <string name="fixtures_drawer_menu">Fixtures / Results</string>
    <string name="standings_drawer_menu">Standings</string>
    <string name="settings_drawer_menu">Settings</string>
    <string name="selectedTeamImgContent">Your favourite teams logo</string>

    <!-- Settings Strings -->
    <string name="settingsFragHeader">Settings</string>
    <string name="prefTeamNameSummary">Favourite Team Name: %1$s</string>
    <string name="prefTeamLogoSummary">Favourite Team Logo: %1$s</string>
    <string name="prefTeamIdSummary">Favourite Team ID: %1$d</string>
    <string name="prefTeamNameSummaryDefault">Favourite Team Name:</string>
    <string name="prefTeamLogoSummaryDefault">Favourite Team Logo:</string>
    <string name="prefTeamIdSummaryDefault">Favourite Team ID:</string>

    <!-- Standings Strings -->
    <string name="standingsHeader">Standings</string>
    <string name="standingsHeaderPos">Pos</string>
    <string name="standingsHeaderClub">Club</string>
    <string name="standingsHeaderPlayed">PL</string>
    <string name="standingsHeaderWon">W</string>
    <string name="standingsHeaderDrawn">D</string>
    <string name="standingsHeaderLost">L</string>
    <string name="standingsHeaderGD">GD</string>
    <string name="standingsHeaderPoints">Pts</string>
    <string name="standingsHeaderLogoContent">Club logo header</string>
    <string name="standingsClubLogoContent">Club logo</string>
    <string name="standingsDropDownImg">League spinner icon</string>

    <!-- News Fragment Strings -->
    <string name="maxHeader">Max Results</string>
    <string name="value10">10</string>
    <string name="value25">25</string>
    <string name="value50">50</string>

    <!-- Fixture Strings -->
    <string name="fixtureScoreString">%1$d - %2$d</string>
    <string name="fixtureMatchweekHeader">Matchweek %1$d</string>
    <string name="filterMatchweekHeader">Matchweek</string>
    <string name="filterButtonText">Filter</string>

</resources>