<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:paddingTop="0dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/standingsSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primary_variant"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <GridLayout
        android:id="@+id/standingsListHeader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:columnCount="9"
        android:background="@color/primary_variant"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/standingsSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_column="0"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/primary_on"
            android:text="@string/standingsHeaderPos" />

        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:layout_margin="5dp"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/standingsHeaderLogoContent"
            android:gravity="center" />

        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_column="2"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/primary_on"
            android:text="@string/standingsHeaderClub" />


        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_column="3"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/primary_on"
            android:text="@string/standingsHeaderPlayed" />

        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_column="4"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/primary_on"
            android:text="@string/standingsHeaderWon" />

        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_column="5"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/primary_on"
            android:text="@string/standingsHeaderDrawn" />

        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_column="6"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/primary_on"
            android:text="@string/standingsHeaderLost" />

        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_column="7"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/primary_on"
            android:text="@string/standingsHeaderGD" />

        <TextView
            android:id="@+id/pointsTxt"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_column="8"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/primary_on"
            android:text="@string/standingsHeaderPoints" />

    </GridLayout>

    <ListView
        android:id="@+id/standingsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/standingsListHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>