<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:padding="10dp">

    <RadioGroup
        android:id="@+id/maxResultsGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@color/primary_variant"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:text="@string/maxHeader" />

        <RadioButton
            android:id="@+id/maxResults10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:buttonTint="@color/primary_on"
            android:text="@string/value10" />

        <RadioButton
            android:id="@+id/maxResults25"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:buttonTint="@color/primary_on"
            android:text="@string/value25" />

        <RadioButton
            android:id="@+id/maxResults50"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/primary_on"
            android:text="@string/value50" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainNewsList"
        android:background="@color/primary_variant"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.appcompat.widget.LinearLayoutCompat>